[package]
name = "contract-sdk"
version = "0.1.0"
authors = ["developers@centrality.ai"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.0", default-features = false }
primitives = { package = "primitive-types", version = "0.2", default-features = false, features = ["codec"] }
hashbrown = { version = "0.1", features = ["nightly"] }

[dev-dependencies]
parity-codec-derive = { version = "3.0", default-features = false }

[workspace]
members = [
    "bootstrap"
]
